--- a/src/stylesheets/scss/_general.scss
+++ b/src/stylesheets/scss/_general.scss
@@ -3,7 +3,7 @@ html {
   font-size: 1rem;
   font-family: 'Arial', 'Helvetica', sans-serif;
   max-width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 *,
@@ -13,7 +13,11 @@ html {
 }
 
 body {
+  align-items: center;
   background-color: $primary;
+  display: flex;
+  height: 100%;
+  justify-content: center;
   margin: 0;
   padding: 0;
   width: 100%;
