--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -28,6 +28,11 @@ body {
   padding: 0;
   width: 100%; }
 
+.bar {
+  fill: purple; }
+  .bar:hover {
+    fill: brown; }
+
 main {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -44,10 +49,8 @@ main {
       -ms-flex-direction: column;
           flex-direction: column;
   font-size: 1rem;
-  height: 60vh;
   max-width: 100%;
-  padding: 1.5em 2em;
-  width: 50em; }
+  padding: 1.5em 2em; }
   main h1 {
     font-family: Arial, sans-serif;
     font-weight: lighter;
