--- a/src/stylesheets/scss/_general.scss
+++ b/src/stylesheets/scss/_general.scss
@@ -14,23 +14,11 @@ html {
 
 body {
   align-items: center;
-  background-color: $primary;
+  background-color: $body-background;
   display: flex;
   height: 100%;
   justify-content: center;
   margin: 0;
   padding: 0;
   width: 100%;
-}
-
-.bar {
-  fill: purple;
-
-  &:hover {
-    fill: brown;
-  }
-
-  title{
-    width: 10em;
-  }
 }
