--- a/src/stylesheets/scss/_variables.scss
+++ b/src/stylesheets/scss/_variables.scss
@@ -1,3 +1,5 @@
-$graph-background: #fafafa;
-$primary: #ddd;
+$bar-fill: #3191d4;
+$bar-fill--hover: #46ea3b;
+$body-background: #d5d5d5;
+$graph-background: #f2f2f2;
 $text-color: #222;
